# wasi-example

./: .README  .gitignore
app/: Cargo.toml
app/src/: bindings.rs  main.rs
server/: Cargo.toml
server/src/: bindings.rs  lib.rs
validator/: index.js  package-lock.json  package.json
wit/: validator.wit
