[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
clap = { version = "4", features = ["derive"] }

[package.metadata.component]
package = "docs:validator"

[package.metadata.component.target]
path = "../wit/validator.wit"
world = "app"
